# nlp-learning-workflow

./: .env.example  .gitignore  README.md  cursor_rules.md  docker-compose.yml  get_started.py  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: daily.yml
docs/: ARCHITECTURE.md  PRD.md  PROMPTS.md  QUICK_NOTES.md  SCHEDULING.md  SETUP_GUIDE.md
docs/migrations/: 001_initial_schema.sql
nlp_pillars/: __init__.py  cli.py  config.py  db.py  orchestrator.py  schemas.py  vectors.py
nlp_pillars/agents/: __init__.py  discovery_agent.py  discovery_agent_original.py  ingest_agent.py  quiz_agent.py  quiz_agent_original.py  summarizer.py  summarizer_agent.py  synthesis_agent.py
nlp_pillars/tools/: arxiv_tool.py  pdf_loader.py  searxng_tool.py
scripts/: smoke_local.py
searxng_config/: settings.yml
tests/: test_cli.py  test_db.py  test_discovery_and_search.py  test_ingest_agent.py  test_summarizer_agent.py  test_synthesis_quiz_agents.py  test_vectors.py
tests/e2e/: test_smoke.py
tests/integration/: test_orchestrator.py
